@@ -17,6 +17,7 @@ import java.lang.reflect.Method;
 
 import net.sf.oval.exception.ReflectionException;
 
+import com.thoughtworks.paranamer.BytecodeReadingParanamer;
 import com.thoughtworks.paranamer.CachingParanamer;
 import com.thoughtworks.paranamer.Paranamer;
 
@@ -35,7 +36,7 @@ public class ParameterNameResolverParanamerImpl implements ParameterNameResolver
 
 	public ParameterNameResolverParanamerImpl()
 	{
-		paranamer = new CachingParanamer();
+		paranamer = new CachingParanamer(new BytecodeReadingParanamer());
 	}
 
 	public ParameterNameResolverParanamerImpl(final Paranamer paranamer)
