@@ -13,6 +13,7 @@
 - fixed bug [ 2192175 ] Validator.validate checks the same object multiple times
 * upgraded Spring 2.5.6, Groovy 1.5.7, MVEL 1.3.15, Paranamer 1.1.5, jRuby 1.1.4
 + added support for multi-valued constraints
+* JPAAnnotationsConfigurer now interprets @Column.precision/scale for numeric fields
 
 2008-08-10 v1.30
 ================
